# terramaps-app

.claude/: report-generation.md
.github/actions/load-images/: action.yml
.github/actions/short-sha/: action.yml
.github/workflows/: build.yml  deploy.yml  exists.yml  flows.yml  push.yml  tag.yml
api/: .env.docker-compose  .gitignore  docker-compose.debug.yml  docker-compose.yml  openapi.json  pyproject.toml
api/src/: __init__.py
api/src/app/: __init__.py  config.py
api/src/migrations/versions/: 0002_faabb954ac33_enable_postgis.py  0003_700f9e50e2e7_init_models.py  0003_dc2613846b7f_added_initial_models.py  0004_bd9a96a540db_added_zip_code_.py  0005_5d2284c12aed_map_ppt_export_.py
api/src/models/: __init__.py  accounts.py  exports.py  geography.py  graph.py  jobs.py  permissions.py
api/src/routers/: __init__.py  accounts.py  auth.py  exports.py  graph.py  maps.py  mvt.py  ppt_exports.py  spatial.py
api/src/schemas/: accounts.py  exports.py  graph.py
api/src/schemas/dtos/: auth.py  graph.py  maps.py
api/src/services/: auth.py  computation.py  graph.py  mvt.py  mvt_cache.py  permissions.py  ppt_builder.py  ppt_exports.py  s3.py
api/src/workers/tasks/: maps.py
app/: .env  Dockerfile  index.html  package.json  pnpm-lock.yaml
app/src/app/: app.tsx  routes.tsx
app/src/components/: brand-logo.tsx
app/src/components/ui/: chart.tsx  resizable.tsx
app/src/features/home/: page.tsx
app/src/features/home/components/: delete-dialog.tsx  export-ppt-dialog.tsx  export-ztt-dialog.tsx  merge-dialog.tsx  move-dialog.tsx  node-detail-sheet.tsx  node-picker.tsx  search-bar.tsx  selection-sheet.tsx
app/src/features/home/components/map/: config.ts  index.tsx  utils.ts
app/src/features/home/providers/active-map-provider/: context.ts  index.tsx
app/src/features/initialize/: initialize.d.ts  page.tsx
app/src/features/initialize/components/: data-step.tsx  import-step.tsx  layer-step.tsx  review-step.tsx
app/src/features/settings/: page.tsx
app/src/hooks/: use-mobile.ts  use-query-param.ts
app/src/lib/: active-map-storage.ts  pluralize.d.ts
app/src/lib/api/: v1.d.ts
app/src/queries/: mutations.ts  queries.ts
scripts/: csv-playground.ipynb  zipcodescom-playground.ipynb
